Added in browser PDF viewer for document list

--- a/src/platform/App_Config/Include/Sitecore.Demo.Verticals.config
+++ b/src/platform/App_Config/Include/Sitecore.Demo.Verticals.config
@@ -9,6 +9,7 @@
       <setting name="Sitecore.ThumbnailsGeneration.Enabled" value="false" />
       <setting name="ExperienceEdge.EnableItemLanguageFallback" value="true"/>
       <setting name="ExperienceEdge.EnableFieldLanguageFallback" value="true"/>
+      <setting name="Media.EnableRangeRetrievalRequest" set:value="false"/>
     </settings>
 
     <sites>
@@ -38,5 +39,13 @@
         <processor type="XmCloudSXAStarter.Pipelines.ParseSiteItem.AddThemeProperty, XmCloudSXAStarter" resolve="true" />
       </parseSiteItem>
     </pipelines>
+    <!-- Set download of PDF files to false -->
+    <mediaLibrary>
+      <mediaTypes>
+        <mediaType name="PDF file" extensions="pdf">
+          <forceDownload>false</forceDownload>
+        </mediaType>
+      </mediaTypes>
+    </mediaLibrary>
   </sitecore>
 </configuration>
