--- a/src/sxastarter/package.json
+++ b/src/sxastarter/package.json
@@ -31,6 +31,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@sitecore-cloudsdk/events": "^0.3.1",
     "@sitecore-feaas/clientside": "^0.5.17",
     "@sitecore-jss/sitecore-jss-nextjs": "~22.1.3",
@@ -41,8 +43,10 @@
     "graphql-tag": "^2.12.6",
     "next": "^14.2.7",
     "next-localization": "^0.12.0",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scroll-parallax": "^3.4.5",
     "react-share": "^5.1.0",
     "sass": "^1.52.3",
