--- a/src/sxastarter/package.json
+++ b/src/sxastarter/package.json
@@ -71,6 +71,7 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.0.5",
+    "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "chalk": "~4.1.2",
